[gd_scene load_steps=5 format=2]

[ext_resource path="res://Game/Stats/Stats.gd" type="Script" id=1]
[ext_resource path="res://Game/Stats/BarBack.png" type="Texture" id=2]
[ext_resource path="res://Game/Stats/ArmorBar.png" type="Texture" id=3]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Stats" type="Node2D"]
script = ExtResource( 1 )

[node name="ShieldBack" type="Sprite2D" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
light_mask = 0
position = Vector2( 0, 24 )
texture = ExtResource( 2 )

[node name="Shield" type="Sprite2D" parent="."]
modulate = Color( 0, 0.392157, 1, 1 )
light_mask = 0
position = Vector2( -32, 24 )
texture = ExtResource( 3 )
offset = Vector2( 32, 0 )

[node name="AreaShield" type="Sprite2D" parent="."]
modulate = Color( 0.12549, 0.670588, 1, 1 )
light_mask = 0
position = Vector2( -32, 24 )
texture = ExtResource( 3 )
offset = Vector2( 32, 0 )

[node name="ArmorBack" type="Sprite2D" parent="."]
modulate = Color( 1, 1, 1, 0.784314 )
light_mask = 0
position = Vector2( 0, 32 )
texture = ExtResource( 2 )

[node name="Armor" type="Sprite2D" parent="."]
light_mask = 0
position = Vector2( -32, 32 )
texture = ExtResource( 3 )
offset = Vector2( 32, 0 )

[node name="Range_Line" type="Line2D" parent="."]
light_mask = 0
material = SubResource( 1 )
width = 3.0
default_color = Color( 1, 0.4, 0.4, 1 )

[node name="Shield_Line" type="Line2D" parent="."]
light_mask = 0
material = SubResource( 1 )
width = 3.0
default_color = Color( 0.4, 0.690196, 1, 1 )
